Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>
Co-authored-by: Waxer59 <78129249+Waxer59@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/1.mdx
@@ -30,9 +30,9 @@ El uso del rastreador es opcional, pero puede ayudarle a recordar donde te queda
 <details>
 <summary>La Unidad 1 son cosas que ya sé hacer. ¿Puedo saltármela?</summary>
 
-Puedes usar las lecciones dentro de [Unidad 1](/es/tutorial/1-setup/) para asegurarte de que tienes las herramientas de desarrollo y las cuentas online que necesitarás para completar el tutorial. Te guiará a través de la creación de un nuevo proyecto Astro, almacenándolo en GitHub, y desplegándolo en Netlify.
+Puedes usar las lecciones dentro de [Unidad 1](/es/tutorial/1-setup/) para asegurarte de que tienes las herramientas de desarrollo y las cuentas online que necesitarás para completar el tutorial. Te guiará a través de la creación de un nuevo proyecto de Astro, almacenándolo en GitHub, y desplegándolo en Netlify.
 
-Si [creas un proyecto Astro nuevo y vacío](/es/install/auto/) y te sientes cómodo con tu configuración, puedes pasar sin problemas a la [Unidad 2](/es/tutorial/2-pages/) donde empezarás a crear nuevas páginas en tu proyecto.
+Si [creas un proyecto de Astro nuevo y vacío](/es/install/auto/) y te sientes cómodo con tu configuración, puedes pasar sin problemas a la [Unidad 2](/es/tutorial/2-pages/) donde empezarás a crear nuevas páginas en tu proyecto.
 </details>
 
 <details>
