--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -19,7 +19,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
   - Instala cualquier herramienta que vayas a utilizar para crear tu sitio web Astro.
 </PreCheck>
 
-## Obtenga las herramientas de desarrollo que necesites
+## Obtén las herramientas de desarrollo que necesites
 
 ### Terminal
 
