--- a/src/content/docs/es/tutorial/5-astro-api/1.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/1.mdx
@@ -3,7 +3,7 @@ type: tutorial
 title: Crear un archivo de entradas de blog
 i18nReady: true
 description: |-
-  Tutorial: Construye tu primer blog Astro -
+  Tutorial: Construye tu primer blog de Astro -
   Utiliza Astro.glob() para acceder a los datos de los archivos de tu proyecto
 ---
 import Box from '~/components/tutorial/Box.astro';
@@ -17,9 +17,9 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que ya tienes unas cuantas entradas de blog a las que enlazar, vamos a configurar la página Blog para que cree una lista de ellas automáticamente!
 
 <PreCheck>
-  - Acceda a los datos de todos sus puestos a la vez utilizando `Astro.glob()`.
+  - Acceder a los datos de todos tus puestos a la vez utilizando `Astro.glob()`.
   - Mostrar una lista de entradas generada dinámicamente en la página del blog
-  - Refactoriza para utilizar un componente `<BlogPost />` para cada elemento de la lista
+  - Refactorizar para utilizar un componente `<BlogPost />` para cada elemento de la lista
 </PreCheck>
 
 ## Mostrar dinámicamente una lista de entradas
@@ -43,7 +43,7 @@ Ahora que ya tienes unas cuantas entradas de blog a las que enlazar, vamos a con
     ```
 
 
-2. Para generar toda la lista de entradas dinámicamente, utilizando los títulos y las URL de las entradas, sustituya las etiquetas `<li>` individuales por el siguiente código Astro:
+2. Para generar toda la lista de entradas dinámicamente, utilizando los títulos y las URL de las entradas, sustituye las etiquetas `<li>` individuales por el siguiente código Astro:
 
     ```astro title="src/pages/blog.astro" del={9,10,11} ins={13}
     ---
@@ -121,7 +121,7 @@ Intenta por tu cuenta realizar todos los cambios necesarios en tu proyecto Astro
     ```
     </details>
 
-3. Añada la plantilla utilizada para crear cada elemento de la lista de entradas de su blog.
+3. Añade la plantilla utilizada para crear cada elemento de la lista de entradas de tu blog.
 
     <details>
     <summary>Mostrar el código</summary>
@@ -131,7 +131,7 @@ Intenta por tu cuenta realizar todos los cambios necesarios en tu proyecto Astro
     ```
     </details>
 
-4. Importe el nuevo componente a su página Blog.
+4. Importa el nuevo componente a tu página Blog.
 
     <details>
     <summary>Mostrar el código</summary>
@@ -145,7 +145,7 @@ Intenta por tu cuenta realizar todos los cambios necesarios en tu proyecto Astro
     ```
     </details>
 
-5. Compruébelo usted mismo: vea el código del componente terminado.
+5. Compruébalo tu mismo: mira el código del componente terminado.
 
     <details>
     <summary>Mostrar el código</summary>
@@ -179,7 +179,7 @@ Intenta por tu cuenta realizar todos los cambios necesarios en tu proyecto Astro
 
 ### Pon a prueba tus conocimientos
 
-Si su componente Astro contiene la siguiente línea de código: 
+Si tu componente Astro contiene la siguiente línea de código: 
 
 ```astro
 ---
