--- a/src/content/docs/es/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/2.mdx
@@ -4,7 +4,7 @@ title: Generar páginas de etiquetas
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
-  Utilice getStaticPaths() para crear varias páginas (rutas) a la vez
+  Utiliza getStaticPaths() para crear varias páginas (rutas) a la vez
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -16,12 +16,12 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 <PreCheck>
   - Crear una página para generar varias páginas
-  - Especifica qué rutas de página construir, y pasa a cada página sus propios props
+  - Especificar qué rutas de página construir, y pasa a cada página sus propios props
 </PreCheck>
 
 ## Enrutamiento dinámico de páginas
 
-Puede crear conjuntos completos de páginas de forma dinámica utilizando archivos `.astro` que exporten una función `getStaticPaths()`. 
+Puedes crear conjuntos completos de páginas de forma dinámica utilizando archivos `.astro` que exporten una función `getStaticPaths()`. 
 
 ## Crear páginas dinámicamente
 
@@ -51,9 +51,9 @@ Puede crear conjuntos completos de páginas de forma dinámica utilizando archiv
 
     La función `getStaticPaths` devuelve un array de rutas de páginas, y todas las páginas en esas rutas usarán la misma plantilla definida en el fichero.
 
-2. Si ha personalizado las entradas de su blog, sustituya los valores de las etiquetas individuales (por ejemplo, "astro", "éxitos", "comunidad", etc.) por las etiquetas utilizadas en sus propias entradas.
+2. Si has personalizado las entradas de tu blog, sustituye los valores de las etiquetas individuales (por ejemplo, "astro", "éxitos", "comunidad", etc.) por las etiquetas utilizadas en tus propias entradas.
 
-3. Asegúrese de que cada entrada del blog contiene al menos una etiqueta, escrita como una matriz, por ejemplo `tags: ["bloguear"]`.
+3. Asegúrate de que cada entrada del blog contiene al menos una etiqueta, escrita como un array, por ejemplo `tags: ["bloguear"]`.
 
 4. Visita `localhost:3000/tags/astro` en la vista previa de tu navegador y deberías ver una página, generada dinámicamente a partir de `[tag].astro`. Comprueba que también tienes páginas creadas para cada una de tus etiquetas en `/tags/éxitos`, `/tags/comunidad`, y `/tags/aprender%20en%20publico`, etc., o en cada una de tus etiquetas personalizadas. Es posible que primero tengas que salir y reiniciar el servidor de desarrollo para ver estas nuevas páginas.
 
@@ -86,7 +86,7 @@ Puede crear conjuntos completos de páginas de forma dinámica utilizando archiv
     ---
     ```
 
-2. Filtra tu lista de entradas para que sólo incluya entradas que contengan la etiqueta propia de la página.
+2. Filtra tu lista de entradas para incluir solo las entradas que contengan la etiqueta propia de la página.
 
     ```astro title="/src/pages/tags/[tag].astro" ins={4}
     ---
@@ -96,7 +96,7 @@ Puede crear conjuntos completos de páginas de forma dinámica utilizando archiv
     ---
     ```
 
-3. Ahora puede actualizar su plantilla HTML para mostrar una lista de cada entrada del blog que contenga la etiqueta propia de la página. Añade el siguiente código a `[tag].astro`:
+3. Ahora puedes actualizar tu plantilla HTML para mostrar una lista de cada entrada del blog que contenga la etiqueta propia de la página. Añade el siguiente código a `[tag].astro`:
 
     ```astro title="src/pages/tags/[tag].astro" ins={3-5}
     <BaseLayout pageTitle={tag}>   
@@ -107,7 +107,7 @@ Puede crear conjuntos completos de páginas de forma dinámica utilizando archiv
     </BaseLayout>
     ```
 
-4. Incluso puedes refactorizar esto para usar tu componente `<BlogPost />` en su lugar. (No olvide importar este componente en la parte superior de `[tag].astro`).
+4. Incluso puedes refactorizar esto para usar tu componente `<BlogPost />` en su lugar. (No olvides importar este componente en la parte superior de `[tag].astro`).
 
     ```astro title="src/pages/tags/[tag].astro" del={4} ins={5}
     <BaseLayout pageTitle={tag}>
@@ -119,22 +119,22 @@ Puede crear conjuntos completos de páginas de forma dinámica utilizando archiv
     </BaseLayout>
     ```
 
-5. Compruebe la vista previa de su navegador para sus páginas de etiquetas individuales, y ahora debería ver una lista de todas las entradas de su blog que contienen esa etiqueta en particular.
+5. Verifica la vista previa de tu navegador para las páginas de etiquetas individuales, y ahora deberías ver una lista de todas tus entradas de blog que contienen esa etiqueta particular.
 
 <Box icon="question-mark">
 
 ### Analizar el patrón
 
-Para cada uno de los siguientes, indique si el código está escrito **dentro** de la función `getStaticPath()`, o **fuera** de ella.
+Para cada uno de los siguientes, indica si el código está escrito **dentro** de la función `getStaticPath()`, o **fuera** de ella.
 
-1. La llamada `Astro.glob()` para recibir información sobre todos sus archivos `.md` para pasar a cada ruta de página.
+1. La llamada `Astro.glob()` para recibir información sobre todos tus archivos `.md` para pasar a cada ruta de página.
 
     <MultipleChoice>
     <Option isCorrect>dentro `getStaticPaths`</Option>
     <Option>fuera `getStaticPaths`</Option>
     </MultipleChoice>
 
-2. La lista de rutas que generará (returned) `getStaticPaths()`.
+2. La lista de rutas que se van a generar (devolver) mediante`getStaticPaths()`.
 
     <MultipleChoice>
     <Option isCorrect>dentro `getStaticPaths`</Option>
@@ -158,21 +158,21 @@ Para recibir información en la plantilla HTML de una ruta de página, escríbal
 
 ## JavaScript avanzado: Generar páginas a partir de etiquetas existentes
 
-Sus páginas de etiquetas se definen ahora estáticamente en `[tag].astro`. Si añade una nueva etiqueta a una entrada del blog, también tendrá que volver a visitar esta página y actualizar sus rutas de página.
+Tus páginas de etiquetas ahora están definidas estáticamente en `[tag].astro`.  Si agregas una nueva etiqueta a una publicación de blog, también deberás visitar esta página y actualizar las rutas de tus páginas.
 
-El siguiente ejemplo muestra cómo sustituir el código de esta página por un código que buscará automáticamente y generará páginas para cada etiqueta utilizada en las páginas de su blog.
+El siguiente ejemplo muestra cómo sustituir el código de esta página por un código que buscará automáticamente y generará páginas para cada etiqueta utilizada en las páginas de tu blog.
 
 :::note
-Aunque parezca un reto, puedes intentar seguir los pasos para construir esta función por ti mismo. Si no quieres caminar a través del JavaScript requerido en este momento, puedes saltar a la [versión final del código](#ejemplo-de-código-final) y usarlo directamente en tu proyecto, reemplazando el contenido existente.
+Aunque parezca un reto, puedes intentar seguir los pasos para construir esta función por ti mismo. Si no quieres repasar el código JavaScript requerido en este momento, puedes saltar a la [versión final del código](#ejemplo-de-código-final) y usarlo directamente en tu proyecto, reemplazando el contenido existente.
 :::
 
-### 1. Compruebe que todas las entradas de su blog contienen etiquetas
+### 1. Comprueba que todas las entradas de tu blog contienen etiquetas
 
-Revise cada una de sus páginas Markdown existentes y asegúrese de que cada entrada contiene una matriz `tags` en su frontmatter. Incluso si sólo tiene una etiqueta, debe escribirse como una matriz, por ejemplo, `tags: ["blogging"]`. 
+Revisa cada una de tus páginas Markdown existentes y asegúrate de que cada entrada contiene un array `tags` en su frontmatter. Incluso si sólo tiene una etiqueta, debe escribirse como un array, por ejemplo, `tags: ["bloguear"]`. 
 
-### 2. Crear una matriz con todas las etiquetas existentes
+### 2. Crear un array con todas las etiquetas existentes
 
-Añada el siguiente código para obtener una lista de todas las etiquetas utilizadas en las entradas de su blog.
+Añade el siguiente código para obtener una lista de todas las etiquetas utilizadas en las entradas de tu blog.
 
   ```astro title="src/pages/tags/[tag].astro" ins={7}
   ---
@@ -186,14 +186,14 @@ Añada el siguiente código para obtener una lista de todas las etiquetas utiliz
   ```
 
     <details>
-    <summary>Dime con más detalle qué hace esta línea de código!</summary>
+    <summary>¡Dime con más detalle qué hace esta línea de código!</summary>
 
-    No pasa nada si no es algo que usted mismo hubiera escrito!
+   ¡Está bien si esto no es algo que hubieras escrito tú mismo todavía!
 
-    Recorre cada entrada Markdown, una a una, y combina cada matriz de etiquetas en una única matriz más grande. A continuación, crea un nuevo `Conjunto` a partir de todas las etiquetas individuales que ha encontrado (para ignorar los valores repetidos). Finalmente, convierte ese conjunto en un array (sin duplicaciones), que puedes usar para mostrar una lista de etiquetas en tu página.
+    Recorre cada entrada Markdown, una a una, y combina cada array de etiquetas en un único array más grande. A continuación, crea un nuevo `Conjunto` a partir de todas las etiquetas individuales que ha encontrado (para ignorar los valores repetidos). Finalmente, convierte ese conjunto en un array (sin duplicaciones), que puedes usar para mostrar una lista de etiquetas en tu página.
     </details>
 
-Ahora tienes una matriz `uniqueTags` con los elementos `"astro"`, `"éxitos"`, `"comunidad"`, `"bloguear"`, `"contratiempos"`, `"aprender en público"`. 
+Ahora tienes un array `uniqueTags` con los elementos `"astro"`, `"éxitos"`, `"comunidad"`, `"bloguear"`, `"contratiempos"`, `"aprender en público"`. 
 
 ### 3. Sustituir el valor `return` de la función `getStaticPaths`
 
@@ -217,7 +217,7 @@ Ahora tienes una matriz `uniqueTags` con los elementos `"astro"`, `"éxitos"`, `
 ``` 
 Una función `getStaticPaths` siempre debe devolver una lista de objetos que contengan `params` (cómo llamar a cada ruta de página) y opcionalmente cualquier `props` (datos que quieras pasar a esas páginas). Anteriormente, definiste cada nombre de etiqueta que sabías que se usaba en tu blog y pasaste toda la lista de entradas como props a cada página.
 
-Ahora, genera esta lista de objetos automáticamente utilizando su matriz `uniqueTags` para definir cada parámetro.
+Ahora, generas esta lista de objetos automáticamente utilizando tu array `uniqueTags` para definir cada parámetro.
 
 Y, ahora la lista de todos los posts del blog es filtrada **antes** de ser enviada a cada página como props. Asegúrate de eliminar la línea de código anterior que filtra los posts, y actualiza tu plantilla HTML para usar `posts` en lugar de `filteredPosts`.
 
@@ -235,7 +235,7 @@ const filteredPosts = posts.filter((post) => post.frontmatter.tags.includes(tag)
 
 ### Ejemplo de código final
 
-Para comprobar tu trabajo, o si simplemente quieres un código completo y correcto para copiar en `[tag].astro`, aquí tienes el aspecto que debería tener tu componente Astro:
+Para comprobar tu trabajo, o si simplemente quieres un código completo y correcto para copiar en `[tag].astro`, aquí tienes el aspecto que debería tener tu componente de Astro:
 
 ```astro title="src/pages/tags/[tag].astro"
 ---
@@ -267,11 +267,11 @@ const { posts } = Astro.props;
 </BaseLayout>
 ```
 
-Ahora, debería poder visitar cualquiera de sus páginas de etiquetas en la vista previa de su navegador.
+Ahora, deberías poder visitar cualquiera de tus páginas de etiquetas en la vista previa de tu navegador.
 
 Navega a `localhost:3000/tags/comunidad` y verás una lista sólo de las entradas de tu blog con la etiqueta `comunidad`. Del mismo modo, `localhost:3000/tags/aprender%20en%20publico` debería mostrar una lista de las entradas del blog con la etiqueta `aprender en público`.
 
-En la siguiente sección, creará enlaces de navegación a estas páginas.
+En la siguiente sección, crearás enlaces de navegación a estas páginas.
 
 
 
@@ -279,13 +279,13 @@ En la siguiente sección, creará enlaces de navegación a estas páginas.
 
 ### Pon a prueba tus conocimientos
 
-Elija el término que corresponda a la descripción.
+Elije el término que corresponda a la descripción.
 
 1. Función que devuelve un array de rutas de páginas.
 
     <MultipleChoice>
       <Option>params</Option>
-      <Option>dynamic routing</Option>
+      <Option>enrutamiento dinámico</Option>
       <Option isCorrect>`getStaticPaths()`</Option>
       <Option>props</Option>
     </MultipleChoice>
@@ -294,7 +294,7 @@ Elija el término que corresponda a la descripción.
 
     <MultipleChoice>
       <Option>params</Option>
-      <Option isCorrect>dynamic routing</Option>
+      <Option isCorrect>enrutamiento dinámico</Option>
       <Option>`getStaticPaths()`</Option>
       <Option>props</Option>
     </MultipleChoice>
@@ -303,7 +303,7 @@ Elija el término que corresponda a la descripción.
 
     <MultipleChoice>
       <Option isCorrect>params</Option>
-      <Option>dynamic routing</Option>
+      <Option>enrutamiento dinámico</Option>
       <Option>`getStaticPaths()`</Option>
       <Option>props</Option>
     </MultipleChoice>
@@ -324,4 +324,4 @@ Elija el término que corresponda a la descripción.
 
 - [Enrutamiento dinámico de páginas en Astro](/es/core-concepts/routing/#rutas-dinámicas)
 
-- [`getStaticPaths()` API documentacion](/es/reference/api-reference/#getstaticpaths)
+- [documentación de la API `getStaticPaths()`](/es/reference/api-reference/#getstaticpaths)
