--- a/src/content/docs/es/tutorial/5-astro-api/4.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/4.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-title: Añadir un canal RSS
+title: Añadir un feed RSS
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
-  Instale el paquete oficial de Astro para crear un feed al que sus lectores puedan
+  Instala el paquete oficial de Astro para crear un feed al que tus lectores puedan
   suscribirse
 ---
 import Box from '~/components/tutorial/Box.astro';
@@ -16,19 +16,19 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
 
 <PreCheck>
-  - Instale un paquete Astro para crear un canal RSS para su sitio web
-  - Crear un feed al que puedan suscribirse y leer los lectores de feeds RSS
+  - Instalar un paquete de Astro para crear un feed RSS para su sitio web
+  - Crear un feed que pueda ser suscrito y leído por lectores de RSS.
 </PreCheck>
 
 ## Instalar el paquete RSS de Astro
 
-Astro ofrece un paquete personalizado para añadir rápidamente un canal RSS a su sitio web. 
+Astro ofrece un paquete personalizado para agregar rápidamente un feed RSS a tu sitio web.
 
-Este paquete oficial genera un documento no HTML con información sobre todas las entradas de tu blog que puede ser leído por **lectores de feeds** como Feedly, The Old Reader, y más. Este documento se actualiza cada vez que se reconstruye su sitio.
+Este paquete oficial genera un documento no HTML con información sobre todas las entradas de tu blog que puede ser leído por **lectores de feeds** como Feedly, The Old Reader, y más. Este documento se actualiza cada vez que se reconstruye tu sitio.
 
 Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una notificación cuando publiques una nueva entrada en tu sitio, lo que lo convierte en una función muy popular de los blogs.
 
-1. Salga del servidor de desarrollo de Astro y ejecute el siguiente comando en el terminal para instalar el paquete RSS de Astro.
+1. Sal del servidor de desarrollo de Astro y ejecuta el siguiente comando en el terminal para instalar el paquete RSS de Astro.
 
     <PackageManagerTabs>
       <Fragment slot="npm">
@@ -72,7 +72,7 @@ Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una no
 
 1. Crea un nuevo fichero en `src/pages/` llamado `rss.xml.js`.
 
-2. Copie el siguiente código en este nuevo documento, sustituyendo la propiedad `site` por la URL única de Netlify de su sitio. Personalice las propiedades `title` y `description`, y si es necesario, especifique un idioma diferente en `customData`:
+2. Copia el siguiente código en este nuevo documento, sustituyendo la propiedad `site` por la URL única de Netlify de tu sitio. Personaliza las propiedades `title` y `description`, y si es necesario, especifica un idioma diferente en `customData`:
 
     ```js title="src/pages/rss.xml.js"
 
@@ -89,7 +89,7 @@ Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una no
     }
     ```
 
-3. Este documento `rss.xml` sólo se crea cuando se construye su sitio, por lo que no podrá ver esta página en su navegador durante el desarrollo. Salga del servidor de desarrollo y ejecute los siguientes comandos para, en primer lugar, construir su sitio localmente y, a continuación, ver una vista previa de su construcción:
+3. Este documento `rss.xml` sólo se crea cuando se construye tu sitio, por lo que no podrás ver esta página en tu navegador durante el desarrollo. Sal del servidor de desarrollo y ejecuta los siguientes comandos para, en primer lugar, construir tu sitio localmente y, a continuación, ver una vista previa de tu construcción:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
@@ -115,13 +115,13 @@ Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una no
       </Fragment>
     </PackageManagerTabs>
 
-4. Visite `localhost:3000/rss.xml` y compruebe que puede ver texto (sin formato) en la página con un `item` para cada uno de sus archivos `.md`. Cada elemento debe contener información sobre la entrada del blog, como `title`, `url` y `description`.
+4. Visita `localhost:3000/rss.xml` y comprueba que puedes ver texto (sin formato) en la página con un `item` para cada uno de tus archivos `.md`. Cada elemento debe contener información sobre la entrada del blog, como `title`, `url` y `description`.
 
     :::tip[ver tu feed rss en un lector]
     Descarga un lector de feeds, o regístrate en un servicio de lector de feeds online y suscríbete a tu sitio añadiendo tu propia URL de Netlify. También puedes compartir este enlace con otras personas para que puedan suscribirse a tus entradas y recibir una notificación cuando se publique una nueva.
     :::
 
-5. Asegúrese de salir de la vista previa y reiniciar el servidor de desarrollo cuando desee volver a ver su sitio en modo de desarrollo.
+5. Asegúrate de salir de la vista previa y reiniciar el servidor de desarrollo cuando desees volver a ver tu sitio en modo de desarrollo.
 
 
 
@@ -130,8 +130,8 @@ Las personas pueden suscribirse a tu feed en un lector de feeds y recibir una no
 ## Checklist
 
 <Checklist>
-- [ ] Puedo instalar un paquete Astro utilizando la línea de comandos.
-- [ ] Puedo crear un canal RSS para mi sitio web.
+- [ ] Puedo instalar un paquete de Astro utilizando la línea de comandos.
+- [ ] Puedo crear un feed RSS para mi sitio web.
 </Checklist>
 </Box>
 
