--- a/src/content/docs/es/tutorial/5-astro-api/index.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/index.mdx
@@ -7,7 +7,7 @@ description: >-
   Tutorial: Crea tu primer blog Astro —
 
   Obtención y utilización de datos de archivos de proyecto para generar dinámicamente páginas
-  contenido y rutas
+  de contenido y rutas
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -26,12 +26,12 @@ Ahora que ya tienes algunas entradas de blog, ¡vamos a utilizar la API de Astro
 
 ## ¿Adónde vamos?
 
-En esta unidad, dotarás a tu blog de una página de índice, páginas de etiquetas y un canal RSS. 
+En esta unidad, mejorarás tu blog con una página de índice, páginas de etiquetas y un feed de RSS.
 
 Por el camino, aprenderás a utilizar:
-- `Astro.glob()` para acceder a los datos de los archivos de su proyecto
+- `Astro.glob()` para acceder a los datos de los archivos de tu proyecto
 - `getStaticPaths()` para crear varias páginas (rutas) a la vez
-- El paquete Astro RSS para crear un canal RSS
+- El paquete Astro RSS para crear un feed RSS.
 
 
 
