--- a/src/content/docs/es/tutorial/6-islands/1.mdx
+++ b/src/content/docs/es/tutorial/6-islands/1.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-title: Construye tu primera Astro isla
+title: Construye tu primera isla de Astro
 i18nReady: true
 description: |-
-  Tutorial: Crea tu primer blog Astro —
-  Utilice un componente Preact para saludar a sus visitantes con un mensaje seleccionado al azar.
+  Tutorial: Crea tu primer blog con Astro —
+  Utiliza un componente de Preact para saludar a tus visitantes con un mensaje seleccionado al azar.
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -14,34 +14,34 @@ import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
- Utilice un componente Preact para recibir a sus visitantes con un mensaje de bienvenida seleccionado al azar.
+ Utiliza un componente de Preact para saludar a tus visitantes con un mensaje seleccionado al azar.
 
 <PreCheck>
-  - Añada Preact a su proyecto Astro
-  - Incluya islas Astro (componentes `.jsx` de Preact) en su página de inicio
-  - Utilice las directivas `client:` para que las islas sean interactivas
+  - Añadir Preact a tu proyecto de Astro
+  - Incluir islas de Astro (componentes `.jsx` de Preact) en tu página de inicio
+  - Usar las directivas `client:` para que las islas sean interactivas
 </PreCheck>
 
-## Añada Preact a su proyecto Astro
+## Añade Preact a tu proyecto de Astro
 
-1. Si se está ejecutando, salga del servidor de desarrollo para acceder al terminal (método abreviado de teclado: <kbd>Ctrl + C</kbd>).
+1. Si se está ejecutando, sal del servidor de desarrollo para acceder al terminal (método abreviado de teclado: <kbd>Ctrl + C</kbd>).
 
-2. Añade la posibilidad de utilizar componentes Preact en tu proyecto Astro con un solo comando:
+2. Añade la posibilidad de utilizar componentes Preact en tu proyecto de Astro con un solo comando:
 
     ```shell
     npx astro add preact
     ```
 
-2. Siga las instrucciones de la línea de comandos para confirmar la adición de Preact a su proyecto.
+2. Sigue las instrucciones de la línea de comandos para confirmar la adición de Preact a tu proyecto.
  
 
-## Incluir un banner de felicitación Preact
+## Incluir un banner de felicitación de Preact
 
 Este componente tomará un array de mensajes de bienvenida como props y seleccionará aleatoriamente uno de ellos para mostrarlo como mensaje de bienvenida. El usuario puede hacer clic en un botón para obtener un nuevo mensaje aleatorio.
 
 1. Crea un nuevo fichero en `src/components/` llamado `Greeting.jsx`.
 
-    Tenga en cuenta la extensión de archivo `.jsx`. Este archivo se escribirá en Preact, no en Astro.
+    Ten en cuenta la extensión de archivo `.jsx`. Este archivo se escribirá en Preact, no en Astro.
 
 2. Añade el siguiente código a `Greeting.jsx`:
 
@@ -66,7 +66,7 @@ Este componente tomará un array de mensajes de bienvenida como props y seleccio
     }
     ```
 
-3. Importe y utilice este componente en su página de inicio `index.astro`.
+3. Importa y utiliza este componente en tu página de inicio `index.astro`.
 
     ```astro title="src/pages/index.astro" ins={3,8}
     ---
@@ -100,7 +100,7 @@ Este componente tomará un array de mensajes de bienvenida como props y seleccio
 
   5. Vuelve a visitar tu página y compara los dos componentes. El segundo botón funciona porque la directiva `client:load` le dice a Astro que envíe y vuelva a ejecutar su JavaScript al _client_ cuando la página _loads_, haciendo que el componente sea interactivo. A esto lo llamamos un componente **hidratado**.
   
-  6. Una vez que la diferencia sea clara, retire el componente de saludo no hidratado.
+  6. Una vez que la diferencia esté clara, elimina el componente Greeting sin hidratar
 
 
       ```astro title="src/pages/index.astro" del={8} "client:load"
@@ -122,7 +122,7 @@ Este componente tomará un array de mensajes de bienvenida como props y seleccio
 
 Hay otras directivas `client:` para explorar. Cada una envía el JavaScript al cliente en un momento diferente. Por ejemplo, `client:visible` sólo enviará el JavaScript del componente cuando sea visible en la página.
 
-Considere un componente Astro con el siguiente código:
+Considera un componente Astro con el siguiente código:
 
 ```astro
 ---
@@ -140,10 +140,10 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 </BaseLayout>
 ```
 
-1. ¿Cuál de los cinco componentes islas se **hidratará**, enviando JavaScript al cliente?
+1. ¿Cuáles de los cinco componentes serán islas hidratadas, enviando JavaScript al cliente?
 
     <p>
-      <Spoiler>`<PreactBanner client:load />` and `<SvelteCounter client:visible />` serán islas hidratadas.</Spoiler>
+      <Spoiler>`<PreactBanner client:load />`  y `<SvelteCounter client:visible />` serán islas hidratadas.</Spoiler>
     </p>
 
 2. ¿En qué se parecen los dos componentes `<PreactBanner />`? ¿En qué se diferenciarán? 
@@ -155,7 +155,7 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 3. Supongamos que el componente `SvelteCounter` muestra un número y tiene un botón para aumentarlo. Si no pudieras ver el código de tu sitio web, sólo la página publicada en directo, ¿cómo sabrías cuál de los dos componentes `<SvelteCounter />` utiliza `client:visible`? 
 
     <p>
-      <Spoiler>Pruebe a pulsar el botón y vea cuál es el interactivo. Si responde a su entrada, debe haber tenido una directiva `client:`.</Spoiler>
+      <Spoiler>Prueba a pulsar el botón y observa cuál es el interactivo. Si responde a tu entrada, debe haber tenido una directiva `client:`.</Spoiler>
     </p>
 </Box>
 
@@ -165,7 +165,7 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 
 ### Pon a prueba tus conocimientos
 
-Para cada uno de los siguientes componentes, identifique lo que se enviará al navegador:
+Para cada uno de los siguientes componentes, identifica lo que se enviará al navegador:
 
 1. `<ReactCounter client:load/>`
 
