--- a/src/content/docs/es/tutorial/6-islands/2.mdx
+++ b/src/content/docs/es/tutorial/6-islands/2.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: 'De vuelta a tierra firme. Lleva tu blog del día a la noche, ¡sin necesidad de isla!'
+title: 'De vuelta a tierra firme. Lleva tu blog del día a la noche, ¡sin necesidad de islas!'
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
@@ -14,13 +14,13 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Ahora que ya puedes construir islas Astro para elementos interactivos, no olvides que puedes llegar muy lejos con sólo JavaScript y CSS.
+Ahora que puedes construir islas de Astro para elementos interactivos, ¡no olvides que puedes llegar bastante lejos con solo JavaScript y CSS básicos!
 
-Vamos a crear un icono en el que se pueda hacer clic para que los usuarios puedan togglear entre los modos claro y oscuro utilizando otra etiqueta `<script>` para la interactividad... sin enviar JavaScript al navegador.
+Vamos a crear un icono en el que se pueda hacer clic para que los usuarios puedan alternar entre los modos claro y oscuro utilizando otra etiqueta `<script>` para la interactividad... sin enviar JavaScript al navegador.
 
 <PreCheck>
-  - Cree un toggle interactivo con sólo JavaScript y CSS
-  - Envíe la menor cantidad posible de JavaScript al navegador.
+  - Crear un toggle interactivo con sólo JavaScript y CSS
+  - Enviar la menor cantidad posible de JavaScript al navegador.
 </PreCheck>
 
 ## Añadir y estilizar un icono toggle temático
@@ -68,13 +68,13 @@ Vamos a crear un icono en el que se pueda hacer clic para que los usuarios pueda
     </header>
     ```
 
-3. Visita la vista previa de tu navegador en `localhost:3000` para ver el icono ahora en todas tus páginas. Puede intentar hacer clic en él, pero aún no ha escrito un script para hacerlo interactivo.
+3. Visita la vista previa de tu navegador en `localhost:3000` para ver el icono ahora en todas tus páginas. Puedes intentar hacer clic en él, pero aún no has escrito un script para hacerlo interactivo.
 
 ## Añadir estilos CSS para un tema oscuro
 
 Elige algunos colores alternativos para usar en modo oscuro.
 
-1. En `global.css`, define algunos estilos oscuros. Usted puede elegir su propio, o copiar y pegar:
+1. En `global.css`, define algunos estilos oscuros. Puedes elegir los tuyos propios o copiar y pegar:
 
     ```css title="src/styles/global.css"
     html.dark {
@@ -89,7 +89,7 @@ Elige algunos colores alternativos para usar en modo oscuro.
 
 ## Añadir interactividad en el lado del cliente
 
-Para añadir interactividad a un componente Astro, puede utilizar una etiqueta `<script>`. Este script puede comprobar y establecer el tema actual desde `localStorage` y toggle el tema cuando se hace clic en el icono. 
+Para añadir interactividad a un componente de Astro, puedes utilizar una etiqueta `<script>`. Este script puede comprobar y establecer el tema actual desde  `localStorage` y alternar el tema cuando se hace clic en el icono. 
 
 1. Añade la siguiente etiqueta `<script>` en `src/components/ThemeIcon.astro` después de tu etiqueta `<style>`:
 
@@ -143,73 +143,73 @@ Para añadir interactividad a un componente Astro, puede utilizar una etiqueta `
 
 Elige si cada una de las siguientes afirmaciones describe etiquetas Astro `<script>`, componentes del framework UI, o ambos.
 
-1. Le permiten incluir elementos de UI interactivos en su sitio web.
+1. Te permiten incluir elementos de UI interactivos en tu sitio web.
 
     <MultipleChoice>
       <Option>
-        Etiquetas Astro `<script>`.
+        Etiquetas `<script>` de Astro
       </Option>
       <Option>
-        Componentes del framework UI
+        Componentes de frameworks de UI
       </Option>
       <Option isCorrect>
-        ambos
+        Ambas opciones
       </Option>
     </MultipleChoice>
 
-2. Crearán elementos estáticos en su sitio a menos que incluya un `client:` para enviar su JavaScript al cliente y ejecutarlo en el navegador.
+2. Los elementos crearán contenido estático en tu sitio a menos que incluyas un `client:` para enviar tu JavaScript al cliente y ejecutarlo en el navegador.
 
     <MultipleChoice>
       <Option>
-        Etiquetas Astro `<script>`.
+       Etiquetas `<script>` de Astro
       </Option>
       <Option isCorrect>
-        Componentes del framework UI
+        Componentes de frameworks de UI
       </Option>
       <Option>
-        ambos
+        Ambas opciones
       </Option>
     </MultipleChoice>
 
-3. Permiten "probar" un nuevo framework sin necesidad de iniciar un proyecto completamente nuevo con esa pila tecnológica.
+3. Te permiten "probar" un nuevo framework sin necesidad de iniciar un proyecto completamente nuevo con esa pila tecnológica.
 
     <MultipleChoice>
       <Option>
-        Etiquetas Astro `<script>`.
+        Etiquetas `<script>` de Astro
       </Option>
       <Option isCorrect>
-        Componentes del framework UI
+        Componentes de frameworks de UI
       </Option>
       <Option>
-        ambos
+        Ambas opciones
       </Option>
     </MultipleChoice>
 
-4. Permiten reutilizar el código que se ha escrito en otros frameworks y, a menudo, basta con soltarlos directamente en el sitio.
+4. Te permiten reutilizar el código que se ha escrito en otros frameworks y, a menudo, basta con soltarlos directamente en el sitio.
 
     <MultipleChoice>
       <Option>
-        Etiquetas Astro `<script>`.
+        Etiquetas `<script>` de Astro
       </Option>
       <Option isCorrect>
-        Componentes del framework UI
+        Componentes de frameworks de UI
       </Option>
       <Option>
-        ambos
+        Ambas opciones
       </Option>
     </MultipleChoice>
 
-5. Permiten añadir interactividad sin necesidad de conocer o aprender otros frameworks de JavaScript.
+5. Te permiten añadir interactividad sin necesidad de conocer o aprender otros frameworks de JavaScript.
 
     <MultipleChoice>
       <Option isCorrect>
-        Etiquetas Astro `<script>`
+        Etiquetas `<script>` de Astro
       </Option>
       <Option>
-        Componentes del framework UI
+        Componentes de frameworks de UI
       </Option>
       <Option>
-        ambos
+        Ambas opciones
       </Option>
     </MultipleChoice>
 </Box>
