--- a/src/content/docs/es/tutorial/6-islands/index.mdx
+++ b/src/content/docs/es/tutorial/6-islands/index.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-unitTitle: Zarpar hacia las islas Astro
-title: 'Check in: Unidad 6 - Astro Islas'
+unitTitle: Zarpar hacia las islas de Astro
+title: 'Check in: Unidad 6 - Islas de Astro'
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
-  Utiliza las islas Astro para incorporar componentes frontales a tu sitio Astro.
+  Utiliza las islas de Astro para incorporar componentes frontales a tu sitio de Astro.
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -23,12 +23,12 @@ Ahora que ya tienes un blog en pleno funcionamiento, ¡vamos a añadir algunas i
 
 ## ¿Adónde vamos?
 
-En esta unidad, utilizarás **Astro islands** para introducir componentes de frontend framework en tu sitio Astro. 
+En esta unidad, utilizarás **Astro islands** para introducir componentes de frontend framework en tu sitio de Astro. 
 
-Lo harás:
-- Añade un marco de UI, Preact, a tu proyecto Astro
-- Utilice Preact para crear un componente de saludo interactivo
-- Sepa cuándo _no_ elegir islas para la interactividad
+Aprenderás a:
+- Añadeir framework de UI, Preact, a tu proyecto de Astro
+- Utilizar Preact para crear un componente de saludo interactivo
+- Saber cuándo _no_ elegir islas para la interactividad
 
 
 <Box icon="check-list">
@@ -36,6 +36,6 @@ Lo harás:
 ## Checklist
 
 <Checklist key ="interactivity">
-- [ ] Estoy lista para añadir interactividad a mi sitio y empezar a vivir la vida isleña.
+- [ ] ¡Estoy listo para agregar interactividad a mi sitio y comenzar a vivir esa vida de isla!
 </Checklist>
 </Box>
