--- a/src/content/docs/es/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/2.mdx
@@ -269,7 +269,7 @@ const { posts } = Astro.props;
 
 Ahora, deberías poder visitar cualquiera de tus páginas de etiquetas en la vista previa de tu navegador.
 
-Navega a `localhost:3000/tags/comunidad` y verás una lista sólo de las entradas de tu blog con la etiqueta `comunidad`. Del mismo modo, `localhost:3000/tags/aprender%20en%20publico` debería mostrar una lista de las entradas del blog con la etiqueta `aprender en público`.
+Navega a `localhost:3000/tags/community` y verás una lista sólo de las entradas de tu blog con la etiqueta `comunidad`. Del mismo modo, `localhost:3000/tags/learn%20in%20public` debería mostrar una lista de las entradas del blog con la etiqueta `aprender en público`.
 
 En la siguiente sección, crearás enlaces de navegación a estas páginas.
 
