--- a/src/content/docs/es/tutorial/6-islands/1.mdx
+++ b/src/content/docs/es/tutorial/6-islands/1.mdx
@@ -83,7 +83,7 @@ Este componente tomará un array de mensajes de bienvenida como props y seleccio
     Comprueba la vista previa en tu navegador: deberías ver un saludo aleatorio, ¡pero el botón no funcionará!
 
 
-4. Add a second `<Greeting />` component with the `client:load` directive.
+4. Añade un segundo componente `<Greeting />` con la directiva `client:load`.
 
     ```astro title="src/pages/index.astro" ins={9} "client:load"
     ---
