--- a/src/content/docs/es/tutorial/5-astro-api/3.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/3.mdx
@@ -34,7 +34,7 @@ Pero, como ya tienes el directorio `/tags/`, puedes aprovechar otro patrón de e
 
 1. Crea un nuevo fichero `index.astro` en el directorio `src/pages/tags/`.
 
-2. Navigate to `localhost:3000/tags` and verify that your site now contains a page at this URL. It will be empty, but it will exist.
+2. Vaya a `localhost:3000/tags` y compruebe que su sitio contiene ahora una página en esta URL. Estará vacía, pero existirá.
 
 3. Crea una página mínima en `src/pages/tags/index.astro` que utilice tu diseño. Esto ya lo has hecho antes.
 
