rename BaaS to backend everywhere

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -1,7 +1,7 @@
 ---
 title: Firebase & Astro
 description: Add a backend to your project with Supabase
-type: baas
+type: backend
 service: Firebase
 stub: true
 ---
