--- a/src/content/docs/en/guides/backend/appwriteio.mdx
+++ b/src/content/docs/en/guides/backend/appwriteio.mdx
@@ -1,7 +1,7 @@
 ---
 title: Appwrite & Astro
 description: Add a backend to your project with Appwrite
-type: baas
+type: backend
 service: Appwrite
 stub: true
 ---
