--- a/src/content/docs/en/guides/backend/supabase.mdx
+++ b/src/content/docs/en/guides/backend/supabase.mdx
@@ -1,7 +1,7 @@
 ---
 title: Supabase & Astro
 description: Add a backend to your project with Supabase
-type: baas
+type: backend
 service: Supabase
 stub: true
 ---
