--- a/src/content/docs/en/guides/backend/tigris.mdx
+++ b/src/content/docs/en/guides/backend/tigris.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tigris & Astro
 description: Add a backend to your project with Tigris
-type: baas
+type: backend
 service: Tigris
 stub: true
 ---
